# wasm-68k

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE-EXCEPTION  README.md  THIRD_PARTY_NOTICES.md  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: compatibility.yml
.github/workflows/: ci.yml  pages.yml  singlestep.yml
compatibility/: catalog.json  catalog.schema.json
crates/x68k-core/: Cargo.toml
crates/x68k-core/examples/: sharp_trace.rs
crates/x68k-core/src/: bus.rs  color.rs  error.rs  lib.rs  machine.rs  media.rs  scheduler.rs  state.rs  types.rs
crates/x68k-core/src/devices/: audio.rs  crtc.rs  dma.rs  fdc.rs  gvram.rs  hdc.rs  mfp.rs  midi.rs  mod.rs  opm.rs  opm_tables.rs  ppi.rs  rtc.rs  scc.rs  sprite.rs  system_port.rs  video.rs
crates/x68k-core/tests/: compatibility_catalog.rs  cpu_smoke.rs  sharp_official_boot.rs  sharp_official_no_media.rs  singlestep_m68000.rs
crates/x68k-core/tests/fixtures/: grbi_vectors.json
crates/x68k-core/tests/fixtures/audio/: ym2151_register_trace.json
crates/x68k-core/tests/fixtures/m68000/: README.md  representative.json
crates/x68k-native/: Cargo.toml
crates/x68k-native/src/: keyboard.rs  main.rs
crates/x68k-render/: Cargo.toml
crates/x68k-render/src/: lib.rs  shader.wgsl
crates/x68k-wasm/: Cargo.toml
crates/x68k-wasm/src/: lib.rs
docs/: COMPATIBILITY.md  DIAGNOSTICS.md  PHASE_AUDIT.md  PROVENANCE.md  SAVE_STATE.md  SHARP_ASSETS.md  SINGLESTEP_EXPECTED_FAILURES.md
web/: LICENSE  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/public/: audio-worklet.js
web/public/sharp/: SHARP_LICENSE_UTF8.txt
web/src/: diagnostic.ts  gamepad.ts  keyboard.ts  main.ts  storage.ts
web/tests/: pages.spec.ts
