[package]
name = "x68k-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crc32fast = "1.5.0"
lz4_flex = "0.11.5"
m68k = "0.2.1"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.17"

[dev-dependencies]
serde_json = "1.0.145"

[lints]
workspace = true
