[package]
name = "x68k-native"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.103"
env_logger = "0.11.11"
log = "0.4.33"
midir = "0.11.0"
pollster = "1.0.1"
sdl2 = "0.38.0"
wgpu-types = "30"
winit = { version = "0.30.13", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-dlopen"] }
x68k-core.workspace = true
x68k-render.workspace = true

[lints]
workspace = true
